--- a/templates/output.html
+++ b/templates/output.html
@@ -1,28 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<head>
-    <meta charset="utf-8">
-    <title>Deteksi Penyakit Ginjal Kronis</title>
 
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-</head>
-<body class="blue-grey lighten-5">
-<header>
-    <nav>
-        <div class="nav-wrapper blue darken-1">
-            <a href="/" class="brand-logo">Identifikasi Penyakit Ginjal Kronis</a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="datamining_1.html">Data Mining</a></li>
-                <li><a href="identifikasi.html">Identifikasi Pasien</a></li>
-            </ul>
-        </div>
-    </nav>
-</header>
+{% include "header.html" %}
 
 <main>
     <div class="container">
@@ -94,14 +73,6 @@
         </div>
     </div>
 </main>
-
-<footer class="page-footer blue darken-1">
-    <div class="footer-copyright blue darken-2">
-        <div class="container">
-            © 2018 UNDIP
-        </div>
-    </div>
-</footer>
-
-</body>
+<hr>
+{% include "footer.html" %}
 </html>
