--- a/templates/demo_4.html
+++ b/templates/demo_4.html
@@ -9,7 +9,7 @@
             <div class="row">
                 <div class="col s12">
                     <h3>
-                        Transformasi Data Nominal
+                        Penanganan Missing Value
                     </h3>
                     <div class="col s12">
                         <h4>Input</h4>
