--- a/templates/header.html
+++ b/templates/header.html
@@ -4,30 +4,33 @@
     <meta charset="utf-8">
     <title>Deteksi Penyakit Ginjal Kronis</title>
 
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <!-- TABEL -->
-    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-    <!-- CSS -->
-    <script src="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css"></script>
-    <!-- .TABEL -->
+    <!-- MaterializeJS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+
 
 </head>
 <body class="blue-grey lighten-5">
 <header>
+    <div class="header"></div>
     <nav>
         <div class="nav-wrapper blue darken-1">
-            <a href="/" class="brand-logo">Identifikasi Penyakit Ginjal Kronis</a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="datamining_1.html">Data Mining</a></li>
-                <li><a href="demo.html">Demo</a></li>
-                <li><a href="identifikasi.html">Identifikasi Pasien</a></li>
-            </ul>
+            <div class="row">
+                <div class="col s10 offset-s1">
+                    <a href="/" class="brand-logo">Identifikasi Penyakit Ginjal Kronis</a>
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                        {#                        <li><a href="datamining_1.html">Data</a></li>#}
+                        <li><a href="demo">Pemodelan</a></li>
+                        <li><a href="identifikasi.html">Identifikasi Pasien</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </nav>
 </header>
